@@ -1,3 +1,7 @@
+2009-01-18  Andreas Kirschbaum
+
+	* Implement scripts command.
+
 2008-12-21  Andreas Kirschbaum
 
 	* Suppress nrof display for nrof=1.
